# web-server

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
githooks/: commit-msg  pre-commit
include/: chess_request_handler.h  chess_request_handler_factory.h  config_parser.h  crud_request_handler.h  crud_request_handler_factory.h  echo_request_handler.h  echo_request_handler_factory.h  entity_manager.h  fake_file_system.h  file_system.h  health_request_handler.h  health_request_handler_factory.h  http_request.h  logger.h  not_found_handler.h  not_found_handler_factory.h  real_file_system.h  request_handler.h  request_handler_factory.h  response_builder.h  server.h  session.h  sleep_request_handler.h  sleep_request_handler_factory.h  static_request_handler.h  static_request_handler_factory.h
src/: chess_request_handler.cc  chess_request_handler_factory.cc  config_parser.cc  crud_request_handler.cc  crud_request_handler_factory.cc  echo_request_handler.cc  echo_request_handler_factory.cc  entity_manager.cc  example_config  fake_file_system.cc  file_system.cc  health_request_handler.cc  health_request_handler_factory.cc  http_request.cc  logger.cc  not_found_handler.cc  not_found_handler_factory.cc  real_file_system.cc  request_handler_factory.cc  response_builder.cc  server.cc  server_config  server_main.cc  session.cc  sleep_request_handler.cc  sleep_request_handler_factory.cc  static_request_handler.cc  static_request_handler_factory.cc
src/chess130/: chessboard.html  home.html
tests/: chess_request_handler_factory_test.cc  chess_request_handler_test.cc  config_parser_test.cc  crud_request_handler_factory_test.cc  crud_request_handler_test.cc  e2e_test.sh  echo_request_handler_test.cc  entity_manager_test.cc  example_config  example_location_config  fail_test1  fail_test2  fail_test3  fail_test4  fail_test5  fail_test6  fail_test7  fail_test8  fail_test9  fake_file_system_test.cc  file_system_test.cc  health_request_handler_test.cc  http_request_test.cc  integration_pass_test1  integration_pass_test2  integration_pass_test3  integration_pass_test4  integration_pass_test5  integration_test.sh  logger_test.cc  not_found_handler_test.cc  pass_test1  pass_test10  pass_test11  pass_test2  pass_test3  pass_test4  pass_test5  pass_test7  pass_test8  (+8 more)
tests/crud_integration_test/: crud.conf  crud_integration_test.sh
